# music-buddy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose-prod.yml  docker-compose.yml  pyproject.toml
.github/workflow/: tag-release.yml
.github/workflows/: ci.yml  deploy-docker.yml
music_buddy/: app.py
music_buddy/api/models/: job.py
music_buddy/api/routes/: __init__.py  audio.py  sessions.py  sheets.py
music_buddy/api/services/: music_sheet.py  music_splitter.py  youtube_manager.py
music_buddy/config/: models.json
music_buddy/front/static/css/: style.css
music_buddy/front/static/js/: app.js  mixer.js  sessions.js  sheets.js
music_buddy/front/templates/: index.html
music_to_partoch/: clean.py  main.py  track_splitter.py
output/: bass.mid  bass.musicxml  drums.mid  drums.musicxml  other.mid  other.musicxml  vocals.mid  vocals.musicxml
webapp/: app.py
webapp/config/: models.json
webapp/sessions/: sessions.json
webapp/templates/: index.html
