[project]
name = "music-buddy"
version = "1.2.2"
description = "Convert audio music files into separated instrument tracks and generate sheet music automatically."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Dan Seban" }
]
dependencies = [
    "basic-pitch[onnx]>=0.4.0",
    "demucs>=4.0.1",
    "music21>=9.9.1",
    "pretty-midi>=0.2.11",
    "torchaudio>=2.2.0,<2.5.0", # To avoid torchcodec enforced
    "flask>=3.1.3",
    "yt-dlp>=2026.3.3",
    "setuptools==80.10.2", # Required as long as pkg_resources is required by other dependencies. (e.g The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81)
    "gunicorn>=25.1.0",
    "torchcodec>=0.10.0; sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'x86_64')",
    "torch>=2.4.1",
]

[project.optional-dependencies]

dev = [
    "bandit>=1.9.4",
    "pre-commit>=4.5.1",
]

format = [
    "black>=25.1.0",
    "isort>=6.0.1",
]
lint = [
    "ruff>=0.12.0",
]
typing = [
    "mypy>=1.16.1",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["music_buddy*"]

# -----------------------------------------------
# Development tools
# -----------------------------------------------

[tool.uv]
package = true
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[tool.uv.sources]
torch = [
    # Linux x86 → wheels CPU-only
    { index = "pytorch-cpu", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
torchaudio = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.black]
line-length = 88
extend-exclude = '''
(
    \.git
  | \.venv
)
'''

[tool.isort]
# Isort config preconized not to interfere with `black`
profile = "black"
line_length = 88

[tool.mypy]

ignore_missing_imports = true
follow_imports = "silent"
warn_redundant_casts = true
warn_no_return = false
warn_unused_ignores = true
disallow_any_generics = false
check_untyped_defs = true
no_implicit_reexport = false

# For strict mypy put 'true'
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
target-version = "py39" # The minimum version supported
line-length = 88 # Use same as 'black'

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
parse_squash_commits = true
ignore_merge_commits = true
